# jup_poetry_02

./: BEG_03_ff_22_v10.xlsx  pyproject.toml  wot.py
src/jup_poetry_02/.ipynb_checkpoints/: BEG_Poetry_02_Test_01-checkpoint.ipynb
